==> bouffalolab/bouffalo_sdk/bsp/common/ethernet/ethernetif.c <==
#include "lwip/opt.h"
#include "lwip/timeouts.h"
#include "lwip/netif.h"
#include "lwip/dhcp.h"
#include "netif/etharp.h"
#include <string.h>
#include "bflb_emac.h"
#include "ethernet_phy.h"
#include "ethernetif.h"
#include <FreeRTOS.h>
#include "semphr.h"
#include "bflb_common.h"
#define IFNAME0                  'e'
#define IFNAME1                  'x'
#define ETH_DMA_TRANSMIT_TIMEOUT (20U)
#define MAX_DHCP_TRIES           4
#define IP_ADDR0      (uint8_t)192
#define IP_ADDR1      (uint8_t)168
#define IP_ADDR2      (uint8_t)123
#define IP_ADDR3      (uint8_t)100
#define NETMASK_ADDR0 (uint8_t)255
#define NETMASK_ADDR1 (uint8_t)255
#define NETMASK_ADDR2 (uint8_t)255
#define NETMASK_ADDR3 (uint8_t)0
#define GW_ADDR0      (uint8_t)192
#define GW_ADDR1      (uint8_t)168
#define GW_ADDR2      (uint8_t)123
#define GW_ADDR3      (uint8_t)1

void low_level_init(struct netif *netif)
{
    int ret = 0;
    struct bflb_emac_config_s emac_cfg = {
        .inside_clk = EMAC_CLK_USE_EXTERNAL,
        .mii_clk_div = 49,
        .min_frame_len = 64,
        .max_frame_len = ETH_MAX_PACKET_SIZE,
        .mac_addr[0] = 0x18,
        .mac_addr[1] = 0xB9,
        .mac_addr[2] = 0x05,
        .mac_addr[3] = 0x12,
        .mac_addr[4] = 0x34,
        .mac_addr[5] = 0x56,
    };

    /* set MAC hardware address length */
    netif->hwaddr_len = ETH_HWADDR_LEN;

    /* set MAC hardware address */
    netif->hwaddr[0] = emac_cfg.mac_addr[0];
    netif->hwaddr[1] = emac_cfg.mac_addr[1];
    netif->hwaddr[2] = emac_cfg.mac_addr[2];
    netif->hwaddr[3] = emac_cfg.mac_addr[3];
    netif->hwaddr[4] = emac_cfg.mac_addr[4];
    netif->hwaddr[5] = emac_cfg.mac_addr[5];

    /* maximum transfer unit */
    netif->mtu = 1500;

    /* emac init,configure ethernet peripheral (GPIOs, clocks, MAC, DMA) */
    printf("emac init\r\n");
    /* emac & BD init and interrupt attach */
    emac0 = bflb_device_get_by_name("emac0");
    bflb_emac_init(emac0, &emac_cfg);
    bflb_irq_attach(emac0->irq_num, emac_isr, emac0);
    bflb_emac_int_clear(emac0, EMAC_INT_EN_ALL);
    bflb_emac_int_enable(emac0, EMAC_INT_EN_ALL, 1);

    /* phy module init */
    ret = ethernet_phy_init(emac0, &phy_cfg);
    printf("ETH PHY init done! %d\r\n", ret);
    ethernet_phy_status_get();
    if (PHY_STATE_UP == phy_cfg.phy_state) {
        printf("PHY[%lx] @%d ready on %dMbps, %s duplex\n\r", phy_cfg.phy_id, phy_cfg.phy_address, phy_cfg.speed, phy_cfg.full_duplex ? "full" : "half");
    } else {
        printf("PHY Init fail\n\r");
        while (1) {
            bflb_mtimer_delay_ms(10);
        }
    }

    /* emac tx & rx buffer attach */
    emac_init_txrx_buffer(emac0);
    /* EMAC transmit start */
    printf("EMAC start\r\n");
    bflb_emac_start(emac0);
    bflb_irq_enable(emac0->irq_num);

    /* device capabilities */
    /* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
    netif->flags |= NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP;

    /* Initialize the RX POOL */
    LWIP_MEMPOOL_INIT(RX_POOL);

    /* create a binary semaphore used for informing ethernetif of frame reception */
    //vSemaphoreCreateBinary(emac_rx_sem);
    emac_rx_sem = xSemaphoreCreateBinary();

    /* create the task that handles the ETH_MAC */
    printf("[OS] Starting emac rx task...\r\n");
    xTaskCreateStatic(ethernetif_input, (char *)"emac_rx_task", sizeof(emac_rx_stack) / 4, netif, osPriorityRealtime, emac_rx_stack, &emac_rx_handle);
#if LWIP_DHCP
    printf("[OS] Starting emac dhcp task...\r\n");
    xTaskCreateStatic(dhcp_thread, (char *)"emac_dhcp_task", sizeof(emac_dhcp_stack) / 4, netif, osPriorityRealtime, emac_dhcp_stack, &emac_dhcp_handle);
#endif

    if (ret == 0) {
        printf("[OS] %s Netif is up\r\n", netif->name);
        netif_set_up(netif);
        netif_set_link_up(netif);
    }
}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
    err_t errval = ERR_OK;
    struct pbuf *q;

    if (!emac_bd_fragment_support()) {
        uint32_t byteslefttocopy = 0;
        // uint32_t payloadoffset = 0;
        // uint32_t bufferoffset = 0;
        uint32_t framelength = 0;
        uint32_t flags = (EMAC_NORMAL_PACKET);

        for (q = p; q != NULL; q = q->next) {
            // printf("p->tot_len:%d,q->len:%d, q->next:%d,f:%d\r\n", q->tot_len, q->len, q->next, framelength);

            byteslefttocopy = q->len;
            // payloadoffset = 0;

            // check is copy data is larger than emac tx buf
            while ((byteslefttocopy + framelength) > ETH_TX_BUFFER_SIZE) {
                // copy data to tx buf
                printf("tx buf is too larger!\r\n");
                flags = EMAC_FRAGMENT_PACKET;
                // arch_memcpy_fast(&emac_send_buf[framelength + bufferoffset], q->payload + payloadoffset, (ETH_TX_BUFFER_SIZE - bufferoffset));
            }
            // arch_memcpy_fast(&emac_send_buf[framelength], q->payload, byteslefttocopy);
            memcpy(&emac_send_buf[framelength], q->payload, byteslefttocopy);
            // bufferoffset = bufferoffset + byteslefttocopy;
            framelength = framelength + byteslefttocopy;
        }

        if (0 != bflb_emac_bd_tx_enqueue(flags, framelength, emac_send_buf)) {
            printf("emac_bd_tx_enqueue error!\r\n");
            return ERR_IF;
        }

    } else {
        for (q = p; q != NULL; q = q->next) {
            // printf("p->tot_len:%d,q->len:%d, q->next:%d\r\n", q->tot_len, q->len, q->next);
            if (q->len == q->tot_len) {
                if (0 != bflb_emac_bd_tx_enqueue(EMAC_NORMAL_PACKET, q->len, q->payload)) {
                    printf("emac_bd_tx_enqueue error!\r\n");
                    return ERR_IF;
                }
            } else if (q->len < q->tot_len) {
                if (0 != bflb_emac_bd_tx_enqueue(EMAC_FRAGMENT_PACKET, q->len, q->payload)) {
                    printf("emac_bd_tx_enqueue error!\r\n");
                    return ERR_IF;
                }
            } else {
                printf("low_level_output error! Wrong packet!\r\n");
            }
        }
    }

    return errval;
}

static struct pbuf *low_level_input(struct netif *netif)
{
    uint32_t rx_len = 0;
    struct pbuf *p = NULL, *q;

    bflb_emac_bd_rx_dequeue(-1, &rx_len, emac_rx_buffer);

    if (rx_len <= 0) {
        // printf("Recv Null Data\r\n");
        return NULL;
    }

    // printf("Recv full Data\r\n");

    p = pbuf_alloc(PBUF_RAW, rx_len, PBUF_POOL);

    if (p != NULL) {
        for (q = p; q != NULL; q = q->next) {
            memcpy(q->payload, emac_rx_buffer + rx_len - q->tot_len, q->len);
            // arch_memcpy_fast(q->payload, emac_rx_buffer + rx_len - q->tot_len, q->len);
        }
    }

    return p;
}

void ethernetif_input(void *argument)
{
    struct pbuf *p = NULL;
    struct netif *netif = (struct netif *)argument;

    for (;;) {
        if (xSemaphoreTake(emac_rx_sem, portMAX_DELAY) == pdTRUE) {
            do {
                // printf("ethernetif_input\r\n");
                p = low_level_input(netif);

                if (p != NULL) {
                    if (netif->input(p, netif) != ERR_OK) {
                        pbuf_free(p);
                    }
                }
            } while (p != NULL);
        }
    }
}
